[package]
name = "boatvol"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tray-icon = "0.21.3"
windows-core = "0.62.2"

[dependencies.windows]
version = "0.62.2"
features = [
    "Foundation_Collections",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_Media_Audio_Endpoints",
    "Devices_Enumeration",
    "Devices_Bluetooth",
    "Win32_Media_Audio",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_UI_WindowsAndMessaging"
]
